kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: <your_domain>
    http:
      paths:
      - pathType: Prefix
        path: "/hello"
        backend:
          service:
            name: hello
            port:
              number: 80
